--- a/app/sass/lib/_variables.sass
+++ b/app/sass/lib/_variables.sass
@@ -19,7 +19,8 @@ $ca-blue-50: #f5f8ff
 //oranges
 $ca-or-300: #ff9900
 $ca-or-200: #ffbd1b
-$ca-or-100: #ffe685
+$ca-or-100: #FFCA00
+$ca-or-50: #FFE685
 
 //MEDIA QUERIES
 //ES
