--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -5,7 +5,7 @@
         font-size: 1.1rem
         display: grid
         grid-template-columns: 1fr 1fr
-        @apply bg-primary
+        @apply bg-primary-700
         @apply text-white
         .footer_left
             grid-column: span 2
