--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -10,7 +10,8 @@ header
   @include li_nav_bar
         
 .nav_bar 
-    @apply sticky top-0 left-0
+    @apply fixed top-0 left-0
+    @apply bg-primary-50
 
 
 
