--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -8,6 +8,7 @@ header
   background-color: white
   z-index: 200
   @include li_nav_bar
+  @apply bg-primary-50
         
 .nav_bar 
     @apply sticky top-0 left-0
