--- a/app/sass/partials/_tools.sass
+++ b/app/sass/partials/_tools.sass
@@ -96,7 +96,7 @@
             border-radius: 12px
             border: solid 1px $ca-blue-200
             transition: 200ms ease-in-out
-            @apply bg-slate-100
+            @apply bg-primary-100
             
             .tool_logo
                 //background-color: $blue_primary                
