--- a/app/sass/partials/_team.sass
+++ b/app/sass/partials/_team.sass
@@ -55,7 +55,7 @@
                         p
                             @apply text-center
                     .mate_email
-                        @apply mt-2 mb-1 p-2 
+                        @apply mt-2 mb-1 p-2 pl-3 pr-3
                         color: $ca-blue-600
                         border: 2px solid $ca-blue-600
                         border-radius: 100px
