--- a/app/sass/partials/_publications.sass
+++ b/app/sass/partials/_publications.sass
@@ -122,6 +122,8 @@
         width: auto
     .papers 
         @apply max-w-7xl mx-auto
+        min-height: 30vh
+
         .paper 
             @apply flex flex-row items-center
             padding: $spacing_sm 0 
