--- a/app/sass/main.css
+++ b/app/sass/main.css
@@ -1440,7 +1440,7 @@ h4, h5 {
   border: 1px solid #4f1be4;
   color: #4f1be4;
   border-radius: 24px;
-  padding: 0.5rem 1.2rem 0.7rem 1.4rem;
+  padding: 0.7rem 0.9rem;
   transition: 200ms ease-in-out;
   display: flex;
   align-content: center;
