--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -7,6 +7,7 @@
         grid-template-columns: 1fr 1fr
         @apply bg-primary-700
         @apply text-white
+       
         .footer_left
             grid-column: span 2
             text-align: left
@@ -41,6 +42,10 @@
 
             li
                 margin: 0 1.3rem 0 0
+                &:hover
+                    text-decoration: underline
+                    cursor: pointer 
+                
 
 @media (min-width: 800px) 
     footer
