--- a/app/sass/partials/_publications.sass
+++ b/app/sass/partials/_publications.sass
@@ -205,7 +205,7 @@
         flex-direction: column
         padding: $spacing_sm 0 $spacing_md 0
         .paper 
-            @apply flex flex-row items-center
+            @apply flex flex-row items-center justify-between
 
             padding: $spacing_sm 0 $spacing_md 0
        
