--- a/app/sass/partials/_headermenu.sass
+++ b/app/sass/partials/_headermenu.sass
@@ -16,25 +16,15 @@ header
 
 
 
-@media (min-width: 150px)         
-    .lang_switcher 
-        @apply text-gray-600
-        margin-left: 2.4rem
-        display: flex
-        flex-direction: column
-        align-items: flex-end
-        cursor: pointer
-        div
-            display: flex
-            margin: 1.7rem 0 0.6rem 0 
-            align-items: center
-        svg
-            margin: 0rem 0.6rem 0 0
-        a:last-child
-            margin-left: 0.26rem
+@media (min-width: 150px)          
+    
         
 
 @media (max-width: 600px)
+    .LangSwitcher
+        width: 100%
+        display: flex
+        justify-content: center
     //responsive
     .responsive-hidden 
         display: none !important
