--- a/app/sass/partials/_projects.sass
+++ b/app/sass/partials/_projects.sass
@@ -61,25 +61,25 @@ $windowWidth: 100%
             // text-overflow: ellipsis
             font-weight: 400     
     .project_cta
-                display: flex
-                justify-content: flex-end
-                margin-top: auto
+        display: flex
+        justify-content: flex-end
+        margin-top: auto
                                 
 
-                .view_project_button
-                    @apply text-ca_blue-600 w-fit border-ca_blue-600 border-2 border-solid
-                    padding: 0.7rem 0.9rem
-                    border-radius: 9999px
-                    font-weight: 600
-                    font-size: 1.1rem
-                    transition: background-color 200ms ease-in-out
-                    font-weight: 600
-                    &:hover
-                        @apply text-white bg-ca_blue-600 border-ca_blue-700  border-solid border-2
-                        cursor: pointer 
-                        font-weight: 600
-                    span
-                        padding-right: 0.6rem
+        .view_project_button
+            @apply text-ca_blue-600 border-ca_blue-600 border-2 border-solid
+            padding: 0.7rem 0.9rem
+            border-radius: 9999px
+            font-weight: 600
+            font-size: 1.1rem
+            transition: background-color 200ms ease-in-out
+            
+            &:hover
+                @apply text-white bg-ca_blue-600 border-ca_blue-700  border-solid border-2
+                cursor: pointer 
+                font-weight: 600
+            span
+                padding-right: 0.6rem
 
 
 
@@ -176,18 +176,20 @@ $windowWidth: 100%
                 margin-top: auto
 
                 .view_project_button
-                    @apply text-ca_blue-600 w-fit border-ca_blue-600 border-2
+                    @apply text-ca_blue-600 border-ca_blue-600 border-2
                     padding: 0.7rem 0.9rem
                     border-radius: 9999px
-                    font-weight: 500
-                    font-size: 1.1rem
                     transition: background-color 200ms ease-in-out
+                    font-size: 1.1rem
+                    
                     font-weight: 600
-
+                        
                     &:hover
                         @apply text-white bg-ca_blue-600 border-ca_blue-700 border-2 
                         cursor: pointer 
                         font-weight: 600
+                    span
+                        padding-right: 0.6rem
 
 
 @media (min-width: 640px)
