--- a/app/sass/partials/_recentPublications.sass
+++ b/app/sass/partials/_recentPublications.sass
@@ -4,48 +4,58 @@
 
 ._recent_publications
     height: fit-content
-    a 
-        height: 100%
 
-.more
-    // grid-column: 3 / span 2
-    // grid-row: 6 / span 1
-    display: flex
-    width: fit-content
-    align-items: right
-    justify-content: right
+    .load_ 
+            padding-top: $spacing_sm
+            padding-bottom: 0
+            display: flex
+            justify-content: center
+            a
+                .more 
+                    @apply bg-ca_blue-50 text-ca_blue-600 w-fit border-ca_blue-600 border-solid border-2
+                    padding: 0.7rem 0.9rem
+                    border-radius: 9999px
+                    font-weight: 500
+                    font-size: 1.1rem
+                    transition: background-color 200ms ease-in-out
+                    font-weight: 600
+                    &:hover
+                        @apply text-white bg-ca_blue-600 border-ca_blue-700  border-solid border-2
+                        cursor: pointer 
+                        font-weight: 600
+    
+  
 
 
 .article
-    transition: 200ms ease-in-out
-    @apply flex flex-col min-h-[260px] h-full
-    @apply bg-primary-50
+    @apply bg-ca_blue-100
+    @apply mb-4 sm:mb-0 p-4 md:p-6 hover:shadow-lg transition-shadow
+    border-radius: 8px
+    display: grid
+    grid-template-rows: 40px 1fr auto
+    align-items: left
+    justify-content: space-between
+    height: 100%
     &:hover
         transition: 200ms ease-in-out
-        @apply bg-primary-300
-
-    .article_stroke.color-orange
-        border: 4px solid $ca-or-300
-
-    .article_stroke.color-yellow
-        border: 4px solid $ca-or-100
-
-    .article_stroke.color-purple
-        @apply border-t-[7px] border-solid border-primary
-
+        
     .article_content
-        @apply px-4 py-8 h-full
+      
         @apply flex flex-col justify-between gap-4
-        @apply text-gray-800
         .article_date
             @apply flex
-            small
+            span
                 @include border-tag
+                @apply text-ca_blue-600 border-2 border-ca_blue-600
+                display: block
+                font-size: 14px
 
         .article_info
-            .title
+            .article_title
+                @apply text-black 
                 font-weight: $bold
             .author
+                
                 font-weight: $regular
 
 // este código está duplicado en publications.
@@ -53,8 +63,11 @@
 .paper_link      
     @include icon-button-left 
     @include button    
-    @apply flex justify-end items-center text-center
-    margin-top: .5rem        
+    display: flex
+    flex-direction: row
+    align-content: flex-end
+    justify-content: flex-end
+    margin-top: 0.6rem        
     a 
         @include big-border-button-blue
         display: flex
