--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -220,28 +220,59 @@ button {
 
     .bullet_elements {
       display: flex;
-      flex-direction: column;
-      gap: 2rem;
+      flex-direction: row;
+      gap: 10rem;
       font-weight: 600;
+      padding: 5rem;
+      padding-bottom: 0;
 
       .bullet_element {
-        align-items: center;
-        @apply bg-blue-50;
-        @apply text-blue-700;
-        border-top-right-radius: 4rem;
-        border-bottom-right-radius: 4rem;
+        position: relative;
         display: flex;
-        padding: 1.5rem 0.5rem 1.5rem 0.5rem;
-        justify-content: space-between;
+        flex-direction: column;
+        align-items: center;
+        background-color: $ca_blue-200;
+        border-top-left-radius: 10rem;
+        border-top-right-radius: 10rem;
+        width: 280px;
+        min-height: 400px;
+        padding: 4rem 2rem 2rem;
+    
+        &::after {
+          content: "";
+          position: absolute;
+          bottom: -2.5rem;
+          width: 100%;
+          height: 55%;
+          background-color: #f5f8ff;
+          border-radius: 0%;
+          z-index: 1;
+      }
+        }
 
         h5 {
           margin-top: 1rem;
+          color: $ca_blue-600;
+          text-align: center;
+          z-index: 2;
+          &:hover {
+            text-decoration: underline;
+          }
         }
 
         .letter {
           font-family: $montserrat-alternates;
           font-weight: $bold;
-          @apply text-blue-300;
+          color: $ca_blue-600;
+          background-color: $ca_blue-50;
+          padding: 1rem 2rem;
+          border-radius: 20rem;
+          z-index: 2;
+        }
+        .icono{
+          font-size: 4rem;
+          padding: 3rem;
+          z-index: 2;
         }
       }
     }
@@ -284,7 +315,7 @@ button {
 
    
   }
-}
+
 
 // .background {
 //   .circle {
@@ -625,7 +656,7 @@ RESPONSIVE
 
 
 
-@media (max-width: 800px) {
+@media (max-width: 950px) {
   .home {
     //margin: 0 2rem 0 2rem;
 
@@ -640,6 +671,24 @@ RESPONSIVE
     .body {
       .latest_publications {
         width: 100%;
+      }
+      .bullet_elements {
+        gap: 3rem;
+        padding: 2rem;
+        .bullet_element {
+          width: 22rem;
+
+      
+          &::after {
+            content: "";
+
+            bottom: -0.5rem;
+            width: 100%;
+            height: 51%;
+            
+            
+        }
+      }  
       }
     }
   }
@@ -669,7 +718,7 @@ RESPONSIVE
 }
 
 //MÓVIL MEDIA QUERY
-@media (max-width: 600px) {
+@media (max-width: 650px) {
 
   .home {
     //margin: 0.4rem;
@@ -704,6 +753,16 @@ RESPONSIVE
         p {
           padding: 0;
         }
+      }
+      .bullet_elements {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        font-weight: 600;
+        padding: 5rem;
+        align-items: center;
+        padding-bottom: 0;
+
       }
     }
   }
