--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -222,7 +222,7 @@ button {
     .bullet_elements {
       display: flex;
       flex-direction: row;
-      gap: 10rem;
+      gap: 8rem;
       font-weight: 600;
       padding: 5rem;
       padding-bottom: 0;
@@ -278,25 +278,62 @@ button {
       }
     }
   
+    // .grid_container {
+    //   width: 100%;
+    //   display: grid;
+    //   grid-template-columns: repeat(3, 1fr);
+    //   grid-template-rows: auto auto;
+    //   gap: 10px;
+    //   .grid_item {
+    //     width: 100%;
+    //     height: 100%;
+    //     display: flex;
+    //     flex-direction: column;
+    //     justify-content: space-between;
+    //     color: white;
+    //     padding: 2rem 2.6rem;
+    //     border-radius: 8px;
+    //     background: linear-gradient(30deg, rgba(83, 64, 255, 0.9) 0%, rgba(111, 199, 255, 0.9) 100%);
+    //   }
+    // }
     .grid_container {
       width: 100%;
       display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: auto auto;
-      gap: 10px;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 16px;
+      padding: 1rem;
+    
       .grid_item {
-        width: 100%;
-        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-between;
         color: white;
-        padding: 2rem 2.6rem;
-        border-radius: 8px;
-        background: linear-gradient(30deg, rgba(83, 64, 255, 0.9) 0%, rgba(111, 199, 255, 0.9) 100%);
+        padding: 2rem;
+        border-radius: 12px;
+        font-weight: 600;
+        font-size: 1.1rem;
+        line-height: 1.5;
+        transition: transform 0.2s ease-in-out;
+        background: linear-gradient(30deg, #5360ff 0%, #6fc7ff 100%);
       }
-    }
+    
+      .lightblue{
+        background: #6E76FF;
+      }
+      .darkblue{
+        background: #3B07C9;
+      }
+      .purple_gradient {
+        background: linear-gradient(45deg, #4f1be4 0%, #6E76FF 100%);
+      }
+    
+      .orange_gradient {
+        background: linear-gradient(30deg, #ff7b00 0%, #FFCA00 100%);
+      }
+    
 
+    }
+    
     /* Media query for small screens */
     @media (max-width: 600px) {
       .grid_container {
