--- a/app/sass/partials/_contact.sass
+++ b/app/sass/partials/_contact.sass
@@ -5,6 +5,7 @@
         .about_description
         .contact_info
             display: flex
+            flex-direction: column
             flex-wrap: wrap
             justify-content: space-around
             .contact,
@@ -24,13 +25,24 @@
                     // padding-bottom: $spacing-sm
                 ul
                     display: flex
-                    flex-direction: column
+                    flex-direction: row
                     flex-grow: 1
                     // gap: $spacing-sm
                     li
                         gap: $spacing-md
                         padding-bottom: $spacing-sm
+                        padding-right: 5rem
+
                         // margin-bottom: 10px 
+                        .contact_link
+                            text-decoration: none
+                            color: inherit
+                 
+
+                            &:hover
+                                color: $ca-blue-600
+                                text-decoration: underline
+                                cursor: pointer
 
     .location
         display: flex
@@ -47,18 +59,17 @@
 
         .location_info
         .location_map
-            &.map-responsive
-                position: relative
-                padding-bottom: 85%
-                height: 0
-                overflow: hidden
+            width: 100%
+            height: 400px
+            border-radius: 12px
+            overflow: hidden
+            box-shadow: 0px 10px 13px -7px rgba(0, 0, 0, 0.18)
 
             iframe
-                position: absolute
-                top: 0
-                left: 0
                 width: 100%
                 height: 100%
+                border: 0
+
     .contact_content
         .icon
             width: 2rem
@@ -110,3 +121,5 @@ h4, h5
                 display: flex
                 // justify-content: center
                 h4
+            .location_map
+                height: 220px
