--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -49,7 +49,7 @@
 
 @mixin tag-black-transparent
     @include lg-tag
-    background-color: rgb(0, 0, 0,0.3)    
+    background-color: rgb(59, 4, 141, 0.3)    
     font-weight: 500
     color: white
    
@@ -96,6 +96,7 @@
     color: white
     p 
         margin-bottom: 0
+
 @mixin big-border-button-blue
     border: 2px solid $ca-blue-700
     color: $ca-blue-700
