--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -128,13 +128,16 @@
 @mixin invisible-button
     @include button
     border-radius: 24px
+    border: 2px solid #4b5563
     @apply text-gray-800
     padding: 0.5rem 1.2rem 0.7rem 1.4rem
     transition: 200ms ease-in-out
+    font-weight: 600
     &:hover
         @apply text-gray-900
         transition: 200ms ease-in-out
         background-color: $ca-blue-300
+        border: 2px solid $ca-blue-800
     &:active
         @apply text-ca_blue-800
         transition: 200ms ease-in-out
