--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -144,6 +144,30 @@ button {
     transition: none;
   }
 }
+.nav_bar {
+  
+
+  li:not(:last-child) {
+    // &.li-selected {
+    //   a {
+    //     border-bottom: $border1;
+
+    //     &:hover {
+    //       border-bottom: $border1;
+    //     }
+    //   }
+    // }
+
+    a {
+      &:hover {
+        border-bottom: $border2 #FFE685;
+        text-decoration: none;
+        color: inherit;
+        cursor: pointer;
+      }
+    }
+  }
+}
 
 .home {
   //margin: 8rem 4rem 0 4rem;
@@ -394,39 +418,10 @@ button {
  ========================================================================== */
 
 .projects {
-  background-color: white;
+  background-color:#f5f8ff;
   //padding: 5rem 0 0 0;
 
-  .nav_bar {
-    
-    .imagotype {
-      .logotype {
-        color: $blue_primary;
-        font-weight: $bold;
-        text-decoration: none;
-      }
-    }
-
-    li {
-      &.li-selected {
-        a {
-           border-bottom: $border1;
-
-          &:hover {
-            border-bottom: $border1;
-          }
-        }
-      }
-
-      a {
-        &:hover {
-          border-bottom: $border2 white;
-          text-decoration: none;
-          color: inherit;
-        }
-      }
-    }
-  }
+  
 
   main {
     max-width: 1440px;
@@ -665,7 +660,72 @@ button {
         }
       }
     }
-  
+    .tools {
+      color: inherit;
+        li {
+          &.li-selected {
+            a {
+              border-bottom: $border1 $ca-or-300;
+    
+              &:hover {
+                border-bottom: $border1 $ca-or-300;
+              }
+            }
+          }
+    
+          a {
+    
+            &:hover {
+              color: inherit;
+              text-decoration: none;
+            }
+          }
+        }
+      }
+      .team {
+        color: inherit;
+          li {
+            &.li-selected {
+              a {
+                border-bottom: $border1 $ca-blue-500;
+      
+                &:hover {
+                  border-bottom: $border1 $ca-blue-500;
+                }
+              }
+            }
+      
+            a {
+      
+              &:hover {
+                color: inherit;
+                text-decoration: none;
+              }
+            }
+          }
+        }
+        .projects {
+          color: inherit;
+            li {
+              &.li-selected {
+                a {
+                  border-bottom: $border1 $ca-or-100;
+        
+                  &:hover {
+                    border-bottom: $border1 $ca-or-100;
+                  }
+                }
+              }
+        
+              a {
+        
+                &:hover {
+                  color: inherit;
+                  text-decoration: none;
+                }
+              }
+            }
+          }
 
 /* =========================================================================
 LINKS
