--- a/app/sass/partials/_tools.sass
+++ b/app/sass/partials/_tools.sass
@@ -57,8 +57,7 @@
         .tool_button
             a
                 @include big-border-button-blue
-            svg
-                display: none
+            
         .tool_github
             margin: 0rem
             button
@@ -90,11 +89,11 @@
 
 @media (min-width:150px)
     .tools
+        background-color: $ca-blue-50
         .tool
             @include img-tool
             @include drop-shadow
             border-radius: 12px
-            border: solid 1px $ca-blue-200
             transition: 200ms ease-in-out
             @apply bg-primary-100
             
@@ -110,7 +109,7 @@
                 display: flex
                 flex-direction: column
                 .tool_title
-                    @apply hover:underline
+                    
                     h2
                         line-height: 115%
                         font-weight: 700
@@ -130,61 +129,67 @@
                             @include big-border-button-blue
                             @apply border-2
                             display: flex
+                            align-items: center
+                            flex-direction: row
+                            font-size: 1.1rem
                             
                         svg
-                            display: none
-                            margin-right: 0.6rem
+                            margin-left: 0.6rem
                     .tool_github
                         @include invisible-button
                         @apply text-gray-600
-                        text-decoration: underline
                         display: flex
+                        a
+                            font-size: 1.1rem
+                            display: flex
+                            align-items: center
+
                         
-@media (min-width: 370px )
-    .tools
-        .tool
-            .tool_content
-                @include container-button-inline
+// @media (min-width: 370px )
+//     .tools
+//         .tool
+//             .tool_content
+//                 @include container-button-inline
                 
-@media (min-width: 500px)
-    .tools
-        .tool
-            .tool_content
-                @include container-button-inline
-@media (min-width: 600px)
-    .tools
-        .tool
-            .tool_description
-                p
-                    margin-bottom:0rem
-            .tool_content
-                @include container-button-column
+// @media (min-width: 500px)
+//     .tools
+//         .tool
+//             .tool_content
+//                 @include container-button-inline
+// @media (min-width: 600px)
+//     .tools
+//         .tool
+//             .tool_description
+//                 p
+//                     margin-bottom:0rem
+//             .tool_content
+//                 @include container-button-column
                 
                 
-@media (min-width: 730px)
-    .tools
-        .tool
-            .tool_content
-                @include container-button-inline
+// @media (min-width: 730px)
+//     .tools
+//         .tool
+//             .tool_content
+//                 @include container-button-inline
                 
                    
-@media (min-width: 900px)
-    .tools
-        .tool
-            .tool_content
-                @include container-button-column
+// @media (min-width: 900px)
+//     .tools
+//         .tool
+//             .tool_content
+//                 @include container-button-column
                 
-@media (min-width: 1150px)
-    .tools
-        .tool
-            .tool_content
-                @include container-button-inline-no-icon
+// @media (min-width: 1150px)
+//     .tools
+//         .tool
+//             .tool_content
+//                 @include container-button-inline-no-icon
                         
-@media (min-width: 1220px)
-    .tools
-        .tool
-            .tool_content
-                @include container-button-inline
+// @media (min-width: 1220px)
+//     .tools
+//         .tool
+//             .tool_content
+//                 @include container-button-inline
 
 
 .bg-blue-gradient-plain
