--- a/app/sass/lib/_mixins.sass
+++ b/app/sass/lib/_mixins.sass
@@ -217,7 +217,7 @@
         padding: 1rem 1.6rem 0 1.6rem
         display: none   
         li 
-            padding: 0.66rem 0
+            padding: 0.66rem
             width: 100%
             text-align: center
             border-bottom: 1px solid $ca-blue-300
