--- a/app/globals.css
+++ b/app/globals.css
@@ -1578,7 +1578,7 @@ h4, h5 {
     width: 100vw;
   }
   .group_description img {
-    width: auto;
+    width:  100%;
     height: 25rem;
     -o-object-fit: cover;
        object-fit: cover;
