--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -88,7 +88,7 @@
     .group_description 
         width: 100%
         img
-            width: auto
+            width:  100%
             height: 25rem
             object-fit: cover
             object-position: 50% 0
