foooter-link-fix

--- a/app/sass/partials/_courses.sass
+++ b/app/sass/partials/_courses.sass
@@ -52,6 +52,7 @@ $windowWidth: 100%
                     background: white
                     transition: 200ms ease-in-out
                     color: #4F1BE4
+                    cursor: pointer
                 a
                     display: flex
                     align-items: center
