--- a/app/sass/partials/_footer.sass
+++ b/app/sass/partials/_footer.sass
@@ -18,6 +18,12 @@
                 margin-bottom: 1rem
                 h5
                     //line-height: 2rem
+            .flex
+                .footer_email
+                    text-decoration: none
+                    &:hover
+                        text-decoration: underline
+                        cursor: pointer 
         .footer_mid_1
             display: flex
             text-align: center
