--- a/app/sass/partials/_contact.sass
+++ b/app/sass/partials/_contact.sass
@@ -89,12 +89,13 @@ h4, h5
     display: flex
     align-items: center
 
-@media (max-width: 640px)
+@media (min-width: 640px)
     .about
         main
 
             .about_description
-        
+                padding-left: 0
+                padding-right: 0
             .contact_info
                 display: flex
                 .contact
