--- a/app/sass/partials/_home.sass
+++ b/app/sass/partials/_home.sass
@@ -60,10 +60,11 @@
             // display: none
 
             border-radius: 70px
-            max-width: 2.4rem
-            height: 2.4rem
-            padding: 0.75rem
+            max-width: 3rem
+            height: 3rem
+            padding: 1rem
             margin-bottom: 0.8rem
+            margin-top: 0.8rem
             background: #ffe489
             border-radius: 80px
             @apply text-orange-400
