--- a/app/sass/partials/_team.sass
+++ b/app/sass/partials/_team.sass
@@ -73,4 +73,19 @@
                             // img
                             //     height: 18px
                             //     width: 18px
-                                
+@media (max-width: 1280px) 
+    .team
+        main
+            .teammates
+                grid-template-columns: repeat(3, minmax(0, 1fr))
+@media (max-width: 880px) 
+    .team
+        main
+            .teammates
+                grid-template-columns: repeat(2, minmax(0, 1fr))
+    
+    
+    
+    
+    
+    
